fix: improve .gitignore to exclude all virtual environment patterns
- Add wildcard patterns for *venv/ and *_venv/
- Include common virtual environment directory names
- Ensure local virtual environments are never committed to GitHub
- Add virtualenv, pyenv common patterns

--- a/.gitignore
+++ b/.gitignore
@@ -106,9 +106,18 @@ celerybeat.pid
 .venv
 env/
 venv/
+*venv/
+*_venv/
 ENV/
 env.bak/
 venv.bak/
+*venv.bak/
+
+# Common virtual environment names
+virtualenv/
+.virtualenv/
+pyenv/
+.pyenv/
 
 # Spyder project settings
 .spyderproject
